**Refactor Validation Tests for Consistency and Clarity**
- Replaced `.get*()` calls with property-style methods (`.field()`, `.message()`) in `ValidationExceptionHandlerTest` and `FieldErrorExtractorTest`.
- Declared constant `DFLT_MSG_VALIDATION_ERROR` in `FieldErrorExtractorTest` for improved readability.
- Adjusted test variables to adhere to consistent naming conventions and use `final` where necessary.
- Cleaned up unnecessary spacing and indentation across test methods.
- Simplified assertions in `ViolationDTO` tests using `result.getFirst()` instead of indexing.

Enhanced consistency, readability, and maintainability in validation exception handling test cases.